<resources>
    <string name="app_name">Riffle</string>

    <string name="action_settings">Settings</string>
    <string name="add_trip_btn_label">Add Trip</string>
    <string name="view_trip_btn_label">View Trips</string>
    <string name="title_activity_add_trip">Trip</string>

    <string name="hello_world">Hello world!</string>
    <string name="act_add_tv_name">Name</string>
    <string name="act_add_tv_date">Date</string>
    <string name="act_add_tv_weather">Weather</string>
    <string name="act_add_tv_watertemp">Water Temperature (deg C)</string>
    <string name="act_add_tv_location">Location</string>
    <string name="act_add_tv_notes">Notes</string>
    <string name="act_add_tv_coords"/>
    <string name="saveTask">Save</string>
    <string name="act_add_tv_level">Water Level (m)</string>
    <string name="title_activity_view_trips">Trips</string>
    <string name="act_displaytrips_tv_date"/>
    <string name="shareTrip">Share</string>
    <string name="editTrip">Edit Trip</string>
    <string name="dialog_location_maps">Maps</string>
    <string name="dialog_location_current">Current</string>

    <string name="google_api_key">AIzaSyApZaY5aLJXTdOK7jPFl69OlNMZHeNgHic</string>
    <string name="menu_take_photo">Take Photo</string>
</resources>
