<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            tools:context="ca.rhythmtech.riffle.activity.AddTripActivity">

    <LinearLayout

            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            >

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/act_add_tv_name"
                android:id="@+id/act_add_tv_name"/>

        <EditText
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:id="@+id/act_add_et_name"
                />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/act_add_tv_date"
                android:id="@+id/act_main_tv_date"/>

        <Button
                android:layout_width="354dp"
                android:layout_height="wrap_content"
                android:text="Today"
                android:id="@+id/act_add_btn_date"
                />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/act_add_tv_weather"
                android:id="@+id/act_add_tv_weather"/>

        <EditText
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:id="@+id/act_add_et_weather"
                />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/act_add_tv_watertemp"
                android:id="@+id/act_add_tv_watertemp"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/act_add_et_watertemp"
                android:numeric="integer"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/act_add_tv_location"
                android:id="@+id/act_add_tv_location"/>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

            <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/homeActivityBtnBlue">

                <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_my_location_white_24dp"
                        android:id="@+id/act_add_imgbtn_mylocation"/>
            </FrameLayout>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/act_add_tv_coords"
                    android:gravity="center"
                    android:id="@+id/act_add_tv_coords"/>
        </LinearLayout>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/act_add_tv_notes"
                android:id="@+id/act_add_tv_notes"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:lines="8"
                android:maxLines="10"
                android:id="@+id/act_add_et_notes"
                android:layout_gravity="center_horizontal"
                android:gravity="start|top"
                android:scrollbars="vertical"/>


    </LinearLayout>
</ScrollView>
